--- a/Lab4FCM/src/main/res/layout/activity_loguin_tabbed.xml
+++ b/Lab4FCM/src/main/res/layout/activity_loguin_tabbed.xml
@@ -56,6 +56,13 @@
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" >
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Button" />
+    </android.support.v4.view.ViewPager>
 
 </android.support.design.widget.CoordinatorLayout>
